--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=bookstore
+
+#show SQL statements in the console
+spring.jpa.show-sql=true
+
+#format SQL output for readability
+spring.jpa.properties.hibernate.format_sql=true
+
+#enable H2 Console
+spring.h2.console.enabled=true
+
+#h2 console url
+spring.h2.console.path=/h2-console
+
+#using H2 database in-memory mode
+spring.datasource.url=jdbc:h2:mem:bookstoredb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+#hibernate settings
+spring.jpa.hibernate.ddl-auto=update
