Modify files. Add RequestMapping, modify html files and clean code

--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.datasource.password=
 
 #hibernate settings
 spring.jpa.hibernate.ddl-auto=update
+
+#spring.application.name=bookdatabase
+#spring.jpa.show-sql= true
+
