Add rest api and testing postman

--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=bookstore
 spring.jpa.show-sql=true
 
 #format SQL output for readability
-spring.jpa.properties.hibernate.format_sql=true
+#spring.jpa.properties.hibernate.format_sql=true
 
 #enable H2 Console
 spring.h2.console.enabled=true
@@ -12,15 +12,6 @@ spring.h2.console.enabled=true
 #h2 console url
 spring.h2.console.path=/h2-console
 
-#using H2 database in-memory mode
-spring.datasource.url=jdbc:h2:mem:bookstoredb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.data.rest.base-path=/api
 
-#hibernate settings
-spring.jpa.hibernate.ddl-auto=update
-
-#spring.application.name=bookdatabase
-#spring.jpa.show-sql= true
 
