Add keytool property to make HTTPS protocol on server

--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -16,6 +16,13 @@ spring.datasource.password=password
 spring.sql.init.mode=always
 spring.batch.jdbc.initialize-schema=always
 
+# Server portserver.port=8443
+# SSL  configuration
+server.ssl.key-store-type=PKCS12
+server.ssl.key-store=/opt/liisadavydov.p12
+server.ssl.key-store-password=password
+server.ssl.key-alias=tomcat
+
 #format SQL output for readability
 #spring.jpa.properties.hibernate.format_sql=true
 
